Refactored `moul`
